--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Cafe</title>
     <link rel="stylesheet" href="styleC.css">
+    <link rel="icon" href="Image/logo.png">
 </head>
-
 <body>
-    <header>
-        <h1>Contact</h1>
-    </header>
-    <main>
-        <p>108 University Avenue E, Waterloo, ON N2J 2W2
-            <a href="https://jb7533.github.io/">JDCafe</a>
-            (xxx) xxx-xxxx
-        </p>
-    </main>
-    <footer>
-        Copyright &copy; WWW.JDCafe.com
-    </footer>
+    <div id="cafe">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="coffe.html">Menu</a>
+                <ul><li><a href="coffe.html">Coffe</a></li>
+                <li><a href="crepe.html">Crepe</a></li></ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
+        <head><h1>Contact</h1></head>
+        <p>108 University Ave E, Waterloo</p>
+        <footer>JaydeepCopyright &copy; 2024</footer>
+    </div>
 </body>
-
 </html>
