--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-            <a href="menu.html">Menu</a>
-            <a href="index.html">JDCafe</a>
-            <a href="contact.html">Contact</a>
-        </h1>
-    </header>
-    <section>
-        <div class="content">
-            <p>A COFFEE A DAY KEEP THE GRUMPY AWAY</p>
-        </div>
-    </section>
-
-    <footer>
-        Copyright &copy; WWW.JDCafe.com
-    </footer>
+    <div id="cafe">  
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="coffe.html">Menu</a>
+                <ul><li><a href="coffe.html">Coffe</a></li>
+                <li><a href="crepe.html">Crepe</a></li></ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
+        <header><h1><img src="Image/MainLogo.png" alt="Logo"></h1><span class="span">The best place for your family & friends</span></header>
+        <footer>JaydeepCopyright &copy; 2024</footer>
+    </div> 
 </body>
 
 </html>
